<resources>
    <string name="app_name">My Application</string>
    <string name="dummy_item">Dummy item</string>
    <string name="with_the_java">with the java</string>
    <string name="powerfull_best">powerfull.Best of all,it\'s interoperable</string>
    <string name="kotlin_is">Kotlin is expressive, concise and</string>
    <string name="kotlin">Kotlin</string>
    <string name="kotlin_image">kotlin image</string>
</resources>